# Harmonim

./: .gitignore  README.md  check_indices.py  debug_articulations.py  debug_dynamics.py  debug_instruments.py  debug_matched_classes.txt  debug_mei.py  debug_orchestral_mei.py  debug_pipeline.py  debug_pipeline_v2.py  debug_svg_structure.py  debug_svg_tags.py  generate_stress_xml.py  manim_output.txt  pyproject.toml  read_log.py  requirements.txt  test_articulations.py  test_beams.py  test_complex.py  test_complex_orchestra.py  test_dynamics.py  test_rests.py  test_slurs.py  test_stress.py
examples/: articulations_test.musicxml  beam_test.musicxml  complex_test.musicxml  comprehensive_score.musicxml  debug_matching.py  demo.musicxml  dynamics_test.musicxml  long_test.musicxml  orchestral_test.musicxml  rests_test.musicxml  simple_score.py  stress_test.musicxml  verovio_spatial_test.py
harmonim/: __init__.py  notation.py  renderer.py  scene.py  verovio_score.py
harmonim/core/: __init__.py  animation.py  animator.py  config.py  smufl_map.py  utils.py
harmonim/elements/: __init__.py  barline.py  base.py  beam.py  clef.py  key_signature.py  note.py  sequence.py  staff.py  tie.py  time_signature.py
harmonim/io/: musicxml.py
harmonim/renderers/: __init__.py  base.py  lilypond_renderer.py  manim_renderer.py  verovio_color_mapper.py  verovio_renderer.py
harmonim/scenes/: musicxml_scene.py
harmonim/utils/: xml_utils.py
output/: temp_id_injected.musicxml
