[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonim"
version = "0.1.0"
description = "A library for creating animated music scores inspired by Manim"
authors = [{name = "Felipe Rodriguez", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "manim",
    "music21",
    "verovio",
    "manimpango"
]

[tool.setuptools.packages.find]
include = ["harmonim*"]
